--- a/javascript/building-blocks/functions/function-scope.html
+++ b/javascript/building-blocks/functions/function-scope.html
@@ -11,10 +11,12 @@
 
     function a() {
       var y = 2;
+      output(z);
     }
 
     function b() {
       var z = 3;
+      output(y);
     }
 
     function output(value) {
@@ -22,6 +24,9 @@
       document.body.appendChild(para);
       para.textContent = 'Value: ' + value;
     }
+
+    output(x);
+    a(), b();
   </script>
 </body>
 </html>
